(@bug W-3193899@) sfstore.py to use conf and log4j files from the sfstore repository
This is to track the following enhancements:

1) sfstore in a box should use the conf files checked into sfstore repository; but provide a way for the user to override it.
2) Use the log4j.properties files from the repository as well.
3) Use bookkeeper-proxy/bin/bkproxy.sh to start the bk proxy
4) Provide options to specify non-default location for storing bk and proxy log files.
5) Provide options to specify the log file rotation size and number of log files to keep.
6) Collect bk and proxy JVM GC logs.
7) Provide option to start only the proxy.